[gd_scene load_steps=18 format=3 uid="uid://ckig1o68rihq4"]

[ext_resource type="Theme" path="res://texttheme.tres" id="1_arv5f"]
[ext_resource type="Script" path="res://newtask.gd" id="1_m8f21"]
[ext_resource type="FontFile" uid="uid://dfvkfjugp4cx1" path="res://Martian_Mono/MartianMono-VariableFont_wdth,wght.ttf" id="2_of3bm"]
[ext_resource type="Script" path="res://option_button.gd" id="3_oa8es"]
[ext_resource type="StyleBox" path="res://darkmodebutton.tres" id="4_f67r6"]
[ext_resource type="Texture2D" uid="uid://cldwbo81eeep3" path="res://xbutton/darkxbutton (1).png" id="5_61xck"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g3ykt"]
bg_color = Color(0, 0, 0, 0.588235)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ukbue"]
bg_color = Color(0, 0, 0, 0.588235)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1n6o6"]
bg_color = Color(0, 0, 0, 0.588235)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v4av5"]
bg_color = Color(0, 0, 0, 0.588235)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v3617"]
bg_color = Color(0, 0, 0, 0.588235)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ee34j"]
bg_color = Color(0, 0, 0, 0.588235)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qgm3k"]
bg_color = Color(0, 0, 0, 0.588235)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vfl88"]
bg_color = Color(0.521569, 0.521569, 0.521569, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d1k6b"]
bg_color = Color(0, 0, 0, 0.588235)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qobp4"]
bg_color = Color(0, 0, 0, 0.588235)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c21q0"]
bg_color = Color(0, 0, 0, 0.588235)

[node name="DarkSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 18.0
offset_top = 16.0
offset_right = 18.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.950357, 0.950357)
script = ExtResource("1_m8f21")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.09
anchor_bottom = 0.5
offset_left = -18.0
offset_top = -17.0
offset_right = 928.32
offset_bottom = 339.0
color = Color(0, 0, 0, 0.784314)

[node name="NewTaskLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = -5.0
offset_right = 490.0
offset_bottom = 55.0
theme = ExtResource("1_arv5f")
theme_override_fonts/font = ExtResource("2_of3bm")
theme_override_font_sizes/font_size = 50
text = "Add new task:"

[node name="NameInput" type="LineEdit" parent="."]
custom_minimum_size = Vector2(100, 0)
layout_mode = 0
offset_left = -2.0
offset_top = 63.0
offset_right = 998.0
offset_bottom = 155.0
theme_override_colors/font_placeholder_color = Color(0.87451, 0.87451, 0.87451, 1)
theme_override_colors/font_selected_color = Color(0.834614, 0.834614, 0.834614, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_of3bm")
theme_override_font_sizes/font_size = 55
theme_override_styles/focus = SubResource("StyleBoxFlat_g3ykt")
placeholder_text = "Input task name"
virtual_keyboard_enabled = false

[node name="SelectClass" type="OptionButton" parent="."]
layout_mode = 0
offset_top = 172.0
offset_right = 932.0
offset_bottom = 265.0
theme = ExtResource("1_arv5f")
theme_override_fonts/font = ExtResource("2_of3bm")
theme_override_font_sizes/font_size = 50
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_ukbue")
theme_override_styles/hover = SubResource("StyleBoxFlat_1n6o6")
theme_override_styles/pressed = SubResource("StyleBoxFlat_v4av5")
selected = 0
item_count = 6
popup/item_0/text = "select class"
popup/item_1/text = "psych theories in film"
popup/item_1/id = 1
popup/item_2/text = "infant child development"
popup/item_2/id = 2
popup/item_3/text = "computer architecture"
popup/item_3/id = 3
popup/item_4/text = "gen physics"
popup/item_4/id = 4
popup/item_5/text = "sensation and perception"
popup/item_5/id = 5
script = ExtResource("3_oa8es")

[node name="SelectType" type="OptionButton" parent="."]
layout_mode = 0
offset_left = 1.0
offset_top = 284.0
offset_right = 708.0
offset_bottom = 377.0
theme_override_fonts/font = ExtResource("2_of3bm")
theme_override_font_sizes/font_size = 50
theme_override_styles/hover_pressed = ExtResource("4_f67r6")
theme_override_styles/hover = ExtResource("4_f67r6")
theme_override_styles/pressed = ExtResource("4_f67r6")
selected = 0
item_count = 9
popup/item_0/text = "select type"
popup/item_1/text = "assignment"
popup/item_1/id = 1
popup/item_2/text = "discussion"
popup/item_2/id = 2
popup/item_3/text = "paper"
popup/item_3/id = 3
popup/item_4/text = "project"
popup/item_4/id = 4
popup/item_5/text = "quiz"
popup/item_5/id = 5
popup/item_6/text = "midterm"
popup/item_6/id = 6
popup/item_7/text = "final"
popup/item_7/id = 7
popup/item_8/text = "studying"
popup/item_8/id = 8

[node name="DateInput" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 1.0
offset_top = 394.0
offset_right = 401.0
offset_bottom = 462.0
theme_override_colors/selection_color = Color(0, 0, 0, 0.588235)
theme_override_colors/font_placeholder_color = Color(0.87451, 0.87451, 0.87451, 1)
theme_override_colors/font_selected_color = Color(0.834614, 0.834614, 0.834614, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_of3bm")
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = ExtResource("4_f67r6")
placeholder_text = "MM/DD/YYYY"
virtual_keyboard_enabled = false

[node name="StartInput" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 1.0
offset_top = 487.0
offset_right = 401.0
offset_bottom = 555.0
theme_override_colors/font_placeholder_color = Color(0.87451, 0.87451, 0.87451, 1)
theme_override_colors/font_selected_color = Color(0.834614, 0.834614, 0.834614, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_of3bm")
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = ExtResource("4_f67r6")
placeholder_text = "Start time"
virtual_keyboard_enabled = false

[node name="EndInput" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 476.0
offset_top = 487.0
offset_right = 876.0
offset_bottom = 555.0
theme_override_colors/font_placeholder_color = Color(0.87451, 0.87451, 0.87451, 1)
theme_override_colors/font_selected_color = Color(0.834614, 0.834614, 0.834614, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_of3bm")
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = ExtResource("4_f67r6")
placeholder_text = "End time"
virtual_keyboard_enabled = false

[node name="Hyphen" type="Label" parent="."]
layout_mode = 0
offset_left = 419.632
offset_top = 492.0
offset_right = 907.632
offset_bottom = 552.0
theme = ExtResource("1_arv5f")
theme_override_fonts/font = ExtResource("2_of3bm")
theme_override_font_sizes/font_size = 50
text = "-
"

[node name="Exit" type="Button" parent="."]
layout_mode = 0
offset_left = 958.0
offset_top = -6.0
offset_right = 1016.0
offset_bottom = 52.0
theme_override_colors/icon_normal_color = Color(0.87451, 0.87451, 0.87451, 1)
theme_override_colors/icon_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/icon_hover_color = Color(1, 1, 1, 1)
theme_override_colors/icon_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_icons/icon = ExtResource("5_61xck")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_v3617")
theme_override_styles/hover = SubResource("StyleBoxFlat_ee34j")
theme_override_styles/pressed = SubResource("StyleBoxFlat_qgm3k")
theme_override_styles/normal = SubResource("StyleBoxFlat_vfl88")
icon_alignment = 1

[node name="AddTaskButton" type="Button" parent="."]
layout_mode = 0
offset_left = 707.0
offset_top = 573.0
offset_right = 1015.0
offset_bottom = 641.0
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(0.87451, 0.87451, 0.87451, 1)
theme_override_fonts/font = ExtResource("2_of3bm")
theme_override_font_sizes/font_size = 50
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_d1k6b")
theme_override_styles/hover = SubResource("StyleBoxFlat_qobp4")
theme_override_styles/pressed = SubResource("StyleBoxFlat_c21q0")
text = "Add task"

[connection signal="item_selected" from="SelectType" to="." method="_on_select_type_item_selected"]
[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="AddTaskButton" to="." method="_on_add_task_button_pressed"]
